--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "npm": "^6.14.8",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
+    "react-quill": "^1.3.5",
     "react-redux": "^7.2.1",
     "react-router-dom": "^5.2.0",
     "redux": "^4.0.5",
