--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "npm": "^6.14.8",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
+    "react-images-upload": "^1.2.8",
     "react-redux": "^7.2.1",
     "react-router-dom": "^5.2.0",
     "redux": "^4.0.5",
