--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
-/config/keys_dev.js
+/config/my_keys_dev.js
+/config/my_keys_prod.js
+/config/my_keys.js
 /node_modules
 /frontend/node_modules
+/config/keys_prod.js
