--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "body-parser": "^1.19.0",
     "concurrently": "^5.3.0",
     "express": "^4.17.1",
+    "google-maps-react": "^2.0.6",
     "i": "^0.3.6",
     "jsonwebtoken": "^8.5.1",
     "jwt-decode": "^3.0.0",
@@ -28,6 +29,7 @@
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
     "react-google-maps": "^9.4.5",
+    "react-map-gl": "^5.2.8",
     "react-quill": "^1.3.5",
     "react-redux": "^7.2.1",
     "react-router-dom": "^5.2.0",
