--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "aws-sdk": "^2.769.0",
     "axios": "^0.20.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
@@ -25,6 +26,8 @@
     "jsonwebtoken": "^8.5.1",
     "jwt-decode": "^3.0.0",
     "mongoose": "^5.10.7",
+    "mongoose-sequence": "^5.2.2",
+    "multer": "^1.4.2",
     "npm": "^6.14.8",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
