--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "concurrently": "^5.3.0",
     "express": "^4.17.1",
     "google-maps-react": "^2.0.6",
+    "html-react-parser": "^0.14.0",
     "i": "^0.3.6",
     "jsonwebtoken": "^8.5.1",
     "jwt-decode": "^3.0.0",
