--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "mongoose": "^5.10.7",
     "mongoose-sequence": "^5.2.2",
     "multer": "^1.4.2",
+    "node-sass": "^4.14.1",
     "npm": "^6.14.8",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
